--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 	"homepage": "https://github.com/fabrifont/coderhouse-backend1#readme",
 	"dependencies": {
 		"express": "^5.2.1",
-		"express-handlebars": "^8.0.1"
+		"express-handlebars": "^8.0.1",
+		"socket.io": "^4.8.3"
 	},
 	"type": "module"
 }
