--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	"dependencies": {
 		"express": "^5.2.1",
 		"express-handlebars": "^8.0.1",
+		"mongoose": "^9.2.1",
 		"socket.io": "^4.8.3"
 	},
 	"type": "module"
